Add Alumno con Vista

--- a/src/vistas/Ventana.form
+++ b/src/vistas/Ventana.form
@@ -20,7 +20,7 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Ver"/>
+            <Property name="text" type="java.lang.String" value="Ver/Agregar"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jViewMateria">
